[package]
name = "polyhorn-yoga"
description = "Rust bindings for Facebook's Yoga, a Flexbox layout engine"
license = "MIT"
repository = "https://github.com/bschwind/yoga-rs"
version = "0.3.3"
authors = ["Brian Schwind <brianmschwind@gmail.com>"]
build = "build.rs"
edition = "2018"

[features]
default = []
serde_support = ["serde", "serde_derive", "ordered-float/serde"]

[build-dependencies]
bindgen = "0.55.1"
cc = "1.0.17"

[dependencies]
ordered-float = "1.0.1"
serde = { version = "1.0.27", optional = true }
serde_derive = { version = "1.0.27", optional = true }
